contest entries announcement

--- a/index.html
+++ b/index.html
@@ -417,26 +417,28 @@
 			<div  class="col-sm-9" >
 				<!-- Newsfeed -->
 
-<!--
-
 <div class="well">
     <div class="newsfeedHeader">
-
-        <div class="newsfeedTitle">Final PSet</div>
-        <div class="moment">2017111715</div>
+        <div class="newsfeedTitle">Contest Results</div>
+        <div class="moment">2018121915</div>
     </div>
     <p>
-        The <a href="//web.stanford.edu/class/cs109/psets/pset6.html">final problem set</a> is now availible. You will derive update equations for a simple deep learning architecture and will implement two machine learning algorithms, Naive Bayes and Logistic Regression. You will then use these algorithms to make predictions on Heart tomography, Netflix movies and Ancestry. 
+        We received 21 contest entries this quarter and were impressed by the creativity and probability know-how the entries showed.
     </p>
 
     <p>
-        <center>
-        <a href="//web.stanford.edu/class/cs109/psets/pset6.html">
-        <img class="media-object" src="//web.stanford.edu/class/cs109/img/psets/pset6b.png" style="width:60%">
-    </center>
-    </a>
+        <b>Winner:</b> Shannon Yan, <a href="//web.stanford.edu/class/cs109/restricted/contest-yan.pdf" target="_blank">Monte Carlo Tree Search for Tic Tac Toe</a>. 
     </p>
+    <p>
+        <b>Finalist:</b> Avanika Narayan, <a href="//web.stanford.edu/class/cs109/restricted/contest-narayan.pdf" target="_blank">Predicting Revenue for SaaS Companies</a>. 
+    </p>
+    <p>
+        <b>Finalist:</b> Anirudh Jain, <a href="//web.stanford.edu/class/cs109/restricted/contest-jain.pdf" target="_blank">Bayesian Networks for Melanoma Genes</a>. 
+    </p>
+    
+</div>
 
+<!--
     
 </div>
 
